--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -4,7 +4,7 @@
     "description": "Name of the extension."
   },
   "extensionDescription": {
-    "message": "Highlight insecure links.",
+    "message": "Highlight insecure links such as ‘http://example.org’.",
     "description": "Description of the extension."
   }
 }
